Fix minor issue

--- a/css/site.css
+++ b/css/site.css
@@ -5,7 +5,9 @@
     --ts-dark-color: #1b1b1b;
     --ts-primary-color: hsl(210, 17%, 18%);
     --ts-secondary-color: hsl(210, 17%, 95%);
+    --ts-tertiary-color: hsl(210, 17%, 30%);
 }
+
 
 html, body {
     height: 100%;
@@ -19,8 +21,6 @@ body {
 main {
     flex-grow: 1;
 }
-
-
 
 footer {
     flex-shrink: 0;
@@ -39,7 +39,6 @@ footer .bi {
 }
 
 footer .bi:hover {
-    /* color: var(--ts-secondary-color); */
     filter: brightness(1.4);
 }
 
@@ -54,10 +53,6 @@ footer .bi:hover {
 .app-logo {
     max-width: 400px;
     border-radius: 12px;
-}
-
-:not(pre) > code[class*="language-"], pre[class*="language-"] {
-    background: var(--ts-primary-color);
 }
 
 .btn-primary {
